samples/_failures_safe/1761353682_7a8ad1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0de05e42.c: In function ‘main’:
./samples/SAFE/__tmp_0de05e42.c:165:5: error: expected expression at end of input
  165 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_0de05e42.c:165:5: error: expected declaration or statement at end of input
